@@ -1,7 +1,6 @@
 package org.dpbe.domain.claim.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.dpbe.domain.actor.Customer;
 import org.dpbe.global.auth.service.AuthAccessService;
 import org.dpbe.domain.claim.dto.AccidentCreateRequest;
@@ -13,6 +12,8 @@ import org.dpbe.domain.claim.repository.DispatchRepository;
 import org.dpbe.domain.common.enums.AccidentReportStatus;
 import org.dpbe.domain.common.enums.AccidentType;
 import org.dpbe.domain.customer.repository.CustomerRepository;
+import org.dpbe.global.auth.dto.AuthenticatedUser;
+import org.dpbe.global.dto.PageResponse;
 import org.dpbe.global.exception.ApiException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -25,6 +26,10 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional(readOnly = true)
 public class AccidentReportService {
+
+    private static final int DEFAULT_PAGE = 1;
+    private static final int DEFAULT_SIZE = 20;
+    private static final int MAX_SIZE = 100;
 
     private final AccidentReportRepository accidentRepository;
     private final DispatchRepository dispatchRepository;
@@ -41,11 +46,39 @@ public class AccidentReportService {
         this.authAccessService = authAccessService;
     }
 
-    public List<AccidentResponse> findAll() {
-        return accidentRepository.findAll().stream()
-                .filter(r -> r.getCustomer() == null || canAccessCustomer(r.getCustomer()))
+    public PageResponse<AccidentResponse> findAll(int page, int size) {
+        AuthenticatedUser user = authAccessService.currentUser();
+        String customerNo = authAccessService.isCustomer() ? user.linkedCustomerNo() : null;
+        if (authAccessService.isCustomer() && customerNo == null) {
+            return emptyPage(page, size);
+        }
+
+        int normalizedPage = normalizePage(page);
+        int normalizedSize = normalizeSize(size);
+        int offset = (normalizedPage - 1) * normalizedSize;
+        int total = accidentRepository.countByCustomerNo(customerNo);
+        List<AccidentResponse> items = accidentRepository
+                .findPageByCustomerNo(customerNo, normalizedSize, offset)
+                .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageResponse<>(normalizedPage, normalizedSize, total, items);
+    }
+
+    private int normalizePage(int page) {
+        return page < 1 ? DEFAULT_PAGE : page;
+    }
+
+    private int normalizeSize(int size) {
+        if (size < 1) {
+            return DEFAULT_SIZE;
+        }
+        return Math.min(size, MAX_SIZE);
+    }
+
+    private <T> PageResponse<T> emptyPage(int page, int size) {
+        return new PageResponse<>(normalizePage(page), normalizeSize(size), 0, List.of());
     }
 
     private Long parseId(String no) {
