@@ -1,7 +1,5 @@
 package org.dpbe.domain.consultation.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 import org.dpbe.domain.consultation.dto.ProposalCreateRequest;
 import org.dpbe.domain.consultation.dto.ProposalResponse;
 import org.dpbe.domain.consultation.entity.InsuranceProduct;
@@ -9,6 +7,7 @@ import org.dpbe.domain.consultation.entity.Proposal;
 import org.dpbe.domain.consultation.repository.InsuranceProductRepository;
 import org.dpbe.domain.consultation.repository.ProposalRepository;
 import org.dpbe.global.auth.service.AuthAccessService;
+import org.dpbe.global.dto.PageResponse;
 import org.dpbe.global.exception.ApiException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,6 +15,10 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional(readOnly = true)
 public class ProposalService {
+
+    private static final int DEFAULT_PAGE = 1;
+    private static final int DEFAULT_SIZE = 20;
+    private static final int MAX_SIZE = 100;
 
     private final ProposalRepository proposalRepo;
     private final InsuranceProductRepository productRepo;
@@ -29,11 +32,27 @@ public class ProposalService {
         this.authAccessService = authAccessService;
     }
 
-    public List<ProposalResponse> findAll() {
+    public PageResponse<ProposalResponse> findAll(int page, int size) {
         authAccessService.requireProposalManageAccess();
-        return proposalRepo.findAll().stream()
+        int normalizedPage = normalizePage(page);
+        int normalizedSize = normalizeSize(size);
+        int offset = (normalizedPage - 1) * normalizedSize;
+        int total = proposalRepo.countAll();
+        var items = proposalRepo.findPage(normalizedSize, offset).stream()
                 .map(ProposalResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageResponse<>(normalizedPage, normalizedSize, total, items);
+    }
+
+    private int normalizePage(int page) {
+        return page < 1 ? DEFAULT_PAGE : page;
+    }
+
+    private int normalizeSize(int size) {
+        if (size < 1) {
+            return DEFAULT_SIZE;
+        }
+        return Math.min(size, MAX_SIZE);
     }
 
     /** 제안서 발송 — 상품 존재 확인 후 저장. */
